src/test/ui/coherence/coherence-negative-outlives-lifetimes.stderr
error[E0119]: conflicting implementations of trait `MyTrait<'_>` for type `&_`
  --> $DIR/coherence-negative-outlives-lifetimes.rs:9:1
   |
LL | impl<'a, T: MyPredicate<'a>> MyTrait<'a> for T {}
   | ---------------------------------------------- first implementation here
LL | impl<'a, T> MyTrait<'a> for &'a T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `&_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
